// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dateInput > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_24__m4c9ow23"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
      >
        Label
      </label>
      <span
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_8__m4c9ow1n"
      >
        *
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_24__m4c9ow23"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with htmlFor 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div>
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_24__m4c9ow23"
        for="id"
        id="id-label"
      >
        Label
      </label>
      <input
        data-testid="test-input"
        id="id"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with label description (ReactNode) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
      >
        Label
      </label>
      <div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with label description (string) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
      >
        Label
      </label>
      <span
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp"
      >
        test
      </span>
    </div>
  </div>
</DocumentFragment>
`;
